--- a/src/app/dashboard/intersection-two-planes/intersection-two-planes.component.html
+++ b/src/app/dashboard/intersection-two-planes/intersection-two-planes.component.html
@@ -1,40 +1,40 @@
 <div class="content-wrapper">
   <div class="content-overflow">
     <div class="container">
-      <div class="row " data-aos="fade-up">
-        <div class="col-xl-12 grid-margin">
+      <div class="row justify-content-center " data-aos="fade-up">
+        <div class="col-xl-12">
           <div class="bg-white main-img-radius-top main-img-radius-bottom">
             <div class="card-body">
               <div class="d-flex border-bottom pb-4 justify-content-center">
                 <div class="content" [innerHTML]="planeForm1">...</div>
               </div>
-
-              <div class="d-flex border-bottom py-4  justify-content-center">
+              <div class="d-flex border-bottom py-4 justify-content-center">
                 <div class="content" [innerHTML]="planeForm2">...</div>
               </div>
-
-
-              <div class="d-flex border-bottom py-4 justify-content-between flex-wrap">
-                <button onclick="fillTestValuesInPlanes(1);">Füllen mit Testwerten</button>
-                <button onclick="fillTestValuesInPlanes(2);">Füllen mit Testwerten</button>
-                <button onclick="drawPlane(1);">Ebene 1 zeichnen</button>
-                <button onclick="drawPlane(2);">Ebene 2 zeichnen</button>
-                <button onclick="findIntersection()">Schnittmenge</button>
-                <button onclick="reset();">Reset</button>
+              <div class="d-flex border-bottom py-4 flex-wrap justify-content-center px-lg-5">
+                <button class="btn btn-outline-primary m-2 flex-grow-1" onclick="fillTestValuesInPlanes(1);">E1 Mit
+                  Random Werte fühlen
+                </button>
+                <button class="btn btn-outline-primary m-2 flex-grow-1" onclick="fillTestValuesInPlanes(2);">E2 Mit
+                  Random Werte fühlen
+                </button>
+                <button class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPlane(1);">E1 zeichnen</button>
+                <button class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPlane(2);">E2 zeichnen</button>
+                <button class="btn btn-outline-success m-2 flex-grow-1" onclick="findIntersection()">Schnittmenge
+                </button>
+                <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
               </div>
-
-
+              <h2 class="display-6 text-center pt-3">Schnittmenge</h2>
+              <div class="d-flex border-bottom py-4  justify-content-center">
+                <div class="content" [innerHTML]="intersectionForm">...</div>
+              </div>
               <div class="d-flex py-4 align-items-center justify-content-center">
                 <div id="ggb-element"></div>
               </div>
-
-
             </div>
           </div>
         </div>
       </div>
-
-
     </div>
   </div>
 </div>
