--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,5 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-image: url("assets/images/background3.jpg");
+  min-height: 100vh;
 }
