--- a/src/app/dashboard/intersection-plane-and-line/intersection-plane-and-line.component.html
+++ b/src/app/dashboard/intersection-plane-and-line/intersection-plane-and-line.component.html
@@ -1,1 +1,56 @@
-<p>intersection-plane-and-line works!</p>
+<div class="content-wrapper">
+  <div class="content-overflow">
+    <div class="container">
+      <div class="row justify-content-center " data-aos="fade-up">
+        <div class="col-xl-12">
+          <div class="bg-white main-img-radius-top main-img-radius-bottom">
+            <div class="card-body">
+              <div class="d-flex border-bottom pb-4 justify-content-center">
+                <div class="content" [innerHTML]="planeForm1">...</div>
+              </div>
+              <div class="d-flex border-bottom py-4  justify-content-center">
+                <div class="content" [innerHTML]="intersectionForm">...</div>
+              </div>
+              <div class="d-flex border-bottom py-4 flex-wrap justify-content-center px-lg-5">
+                <button id="fillEBtn" class="btn btn-outline-primary m-2 flex-grow-1"
+                        onclick="fillTestValuesInPlane();">E mit
+                  Random Werte füllen
+                </button>
+                <button id="fillGBtn" class="btn btn-outline-primary m-2 flex-grow-1"
+                        onclick="fillTestValuesInLine();">G mit
+                  Random Werte füllen
+                </button>
+                <button id="drawEBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPlane();">E
+                  zeichnen
+                </button>
+                <button id="drawGBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine();">G
+                  zeichnen
+                </button>
+                <button id="intersectionBtn" class="btn btn-outline-success m-2 flex-grow-1"
+                        onclick="findIntersection()">Schnittpunkt
+                </button>
+                <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
+              </div>
+              <h2 class="result text-center pt-3">Schnittpunkt</h2>
+              <div class="d-flex py-4 align-items-center justify-content-center">
+                <p class="result">P ( <span id="intersection_point_x"> - </span>
+                  | <span id="intersection_point_y"> - </span> | <span id="intersection_point_z"> - </span> )</p>
+              </div>
+              <div class="d-flex py-4 align-items-center justify-content-center">
+                <div id="ggb-element"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
