--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
                 <div class="px-2" style="min-width: 50%">
                   <h4>Die Länge einer Gerade zweichen zwei Punkten</h4>
                 </div>
-                <a style="text-decoration: none ; color: black" routerLink="vectors">
+                <a style="text-decoration: none ; color: black" (click)="navigateToLengthBetweenTwoPoints()">
                   <div class="rotate-img rounded">
                     <img src="../../assets/images/line-length.png" alt="thumb"
                          class="img-fluid"/>
