added new component parallel-line without funktions srsr

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -48,7 +48,7 @@
                 <div class="px-2" style="min-width: 50%">
                   <h4>Parallele Geraden</h4>
                 </div>
-                <a style="text-decoration: none ; color: black" routerLink="vectors">
+                <a style="text-decoration: none ; color: black" (click)="navigateToParallelLine()">
                   <div class="rotate-img rounded">
                     <img src="../../assets/images/parallel-lines.png" alt="thumb"
                          class="img-fluid"/>
