--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -59,7 +59,7 @@
                 <div class="px-2" style="min-width: 50%">
                   <h4>Schnittpunkt zweier Gerade</h4>
                 </div>
-                <a style="text-decoration: none ; color: black" routerLink="vectors">
+                <a style="text-decoration: none ; color: black" (click)="navigateToIntersectionOfTwoLine()">
                   <div class="rotate-img rounded">
                     <img src="../../assets/images/schnitt-punkt-lines.png" alt="thumb"
                          class="img-fluid"/>
