--- a/src/app/dashboard/length-between-two-points/length-between-two-points.component.html
+++ b/src/app/dashboard/length-between-two-points/length-between-two-points.component.html
@@ -11,27 +11,27 @@
               </div>
               <div class="d-flex border-bottom py-4 flex-wrap justify-content-center px-lg-5">
                 <button id="fillEBtn" class="btn btn-outline-primary m-2 flex-grow-1"
-                        onclick="fillTestValuesInPlane();">P1 mit
+                        onclick="fillTestValuesInPoint(1);">P1 mit
                   Random Werte füllen
                 </button>
                 <button id="fillGBtn" class="btn btn-outline-primary m-2 flex-grow-1"
-                        onclick="fillTestValuesInLine();">G mit
+                        onclick="fillTestValuesInPoint(2);">P2 mit
                   Random Werte füllen
                 </button>
-                <button id="drawEBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPlane();">E
+                <button id="drawP1Btn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPoint(1);">P1
                   zeichnen
                 </button>
-                <button id="drawGBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine();">G
+                <button id="draw21Btn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPoint(2);">P2
                   zeichnen
                 </button>
                 <button id="intersectionBtn" class="btn btn-outline-success m-2 flex-grow-1"
-                        onclick="findIntersection()">Schnittpunkt
+                        onclick="calculateLength()">Länge berechnen
                 </button>
                 <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
               </div>
-              <h2 class="result text-center pt-3">Die Gerade zwischen den zwei gegebenen Punkten</h2>
+              <h2 class="result text-center pt-3">Die Länge zwischen den zwei gegebenen Punkten</h2>
               <div class="d-flex border-bottom py-4  justify-content-center">
-               
+                <h2 class="result text-center">|P1 P2| = <span id="length-between-points">...</span></h2>
               </div>
               <div class="d-flex py-4 align-items-center justify-content-center">
                 <div id="ggb-element"></div>
