--- a/src/app/dashboard/line-between-two-points/line-between-two-points.component.html
+++ b/src/app/dashboard/line-between-two-points/line-between-two-points.component.html
@@ -23,13 +23,13 @@
                 <button id="draw21Btn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPoint(2);">P2 zeichnen
                 </button>
                 <button id="intersectionBtn" class="btn btn-outline-success m-2 flex-grow-1"
-                        onclick="drawLine()">Gerade zeichnen
+                        onclick="calculateLength()">Gerade zeichnen
                 </button>
                 <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
               </div>
               <h2 class="result text-center pt-3">Die Gerade zwischen den zwei gegebenen Punkten</h2>
               <div class="d-flex border-bottom py-4  justify-content-center">
-                <div [innerHTML]="intersectionForm">...</div>
+                <div [innerHTML]="lineForm">...</div>
               </div>
               <div class="d-flex py-4 align-items-center justify-content-center">
                 <div id="ggb-element"></div>
