--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,9 +1,8 @@
 
-
 .content-overflow {
   background-color: rgba(0, 0, 0, 0.9);
   padding: 10px 0;
-
+  height: 100vh;
 }
 
 .content-wrapper .banner-content {
@@ -11,7 +10,7 @@
   padding: 40px 60px;
   left: 0px;
   bottom: 0px;
-
+  min-height: 100%;
 }
 
 .stretch-card {
