added some fixes

--- a/src/app/dashboard/intersection-plane-and-line/intersection-plane-and-line.component.html
+++ b/src/app/dashboard/intersection-plane-and-line/intersection-plane-and-line.component.html
@@ -23,7 +23,7 @@
                 <button id="drawEBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPlane();">E
                   zeichnen
                 </button>
-                <button id="drawGBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="calculateLength();">G
+                <button id="drawGBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine();">G
                   zeichnen
                 </button>
                 <button id="intersectionBtn" class="btn btn-outline-success m-2 flex-grow-1"
