--- a/src/app/dashboard/length-between-two-points/length-between-two-points.component.html
+++ b/src/app/dashboard/length-between-two-points/length-between-two-points.component.html
@@ -31,7 +31,8 @@
               </div>
               <h2 class="result text-center pt-3">Die Länge zwischen den zwei gegebenen Punkten</h2>
               <div class="d-flex border-bottom py-4  justify-content-center">
-                <h2 class="result text-center">|P1 P2| = <span id="length-between-points">...</span></h2>
+                <h2 class="result text-center">|P<sub>1</sub> P<sub>2</sub>| = <span
+                  id="length-between-points">...</span></h2>
               </div>
               <div class="d-flex py-4 align-items-center justify-content-center">
                 <div id="ggb-element"></div>
