--- a/src/app/dashboard/line-between-two-points/line-between-two-points.component.html
+++ b/src/app/dashboard/line-between-two-points/line-between-two-points.component.html
@@ -18,12 +18,14 @@
                         onclick="fillTestValuesInPoint(2);">P2 mit
                   Random Werte füllen
                 </button>
-                <button id="drawP1Btn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPoint(1);">P1 zeichnen
+                <button id="drawP1Btn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPoint(1);">P1
+                  zeichnen
                 </button>
-                <button id="draw21Btn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPoint(2);">P2 zeichnen
+                <button id="draw21Btn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawPoint(2);">P2
+                  zeichnen
                 </button>
                 <button id="intersectionBtn" class="btn btn-outline-success m-2 flex-grow-1"
-                        onclick="calculateLength()">Gerade zeichnen
+                        onclick="drawLine()">Gerade zeichnen
                 </button>
                 <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
               </div>
