--- a/src/app/dashboard/intersection-of-two-lines/intersection-of-two-lines.component.html
+++ b/src/app/dashboard/intersection-of-two-lines/intersection-of-two-lines.component.html
@@ -16,30 +16,35 @@
               </div>
               <div class="d-flex border-bottom py-4 flex-wrap justify-content-center px-lg-5">
                 <button id="fillEBtn" class="btn btn-outline-primary m-2 flex-grow-1"
-                        onclick="fillTestValuesInPlane();">G1 mit
+                        onclick="fillTestValuesInLine(1);">G1 mit
                   Random Werte füllen
                 </button>
                 <button id="fillGBtn" class="btn btn-outline-primary m-2 flex-grow-1"
-                        onclick="fillTestValuesInLine();">G2 mit
+                        onclick="fillTestValuesInLine(2);">G2 mit
                   Random Werte füllen
                 </button>
-                <button id="drawEBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine();">G1
+                <button id="drawEBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine(1);">G1
                   zeichnen
                 </button>
-                <button id="drawGBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine();">G2
+                <button id="drawGBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine(2);">G2
                   zeichnen
                 </button>
                 <button id="intersectionBtn" class="btn btn-outline-success m-2 flex-grow-1"
-                        onclick="findIntersection()">Schnittpunkt
+                        onclick="findIntersectionPointBetweenTwoLines()">Schnittpunkt
                 </button>
                 <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
               </div>
               <h2 class="result text-center pt-3">Schnittpunkt</h2>
               <div class="d-flex py-4 align-items-center justify-content-center">
-                <div class="d-flex border-bottom py-4  justify-content-center">
+                <div class="d-flex py-4 justify-content-center">
                   <div class="content" [innerHTML]="intersectionPoint">...</div>
                 </div>
               </div>
+              <div class="d-flex py-4 justify-content-center">
+                <h2 class="result text-center" id="no-intersection">Es gibt keinen Schnittpunkt. Die Geraden sind
+                  windschief zueinander.</h2>
+              </div>
+
               <div class="d-flex py-4 align-items-center justify-content-center">
                 <div id="ggb-element"></div>
               </div>
