--- a/src/app/dashboard/parallel-line/parallel-line.component.html
+++ b/src/app/dashboard/parallel-line/parallel-line.component.html
@@ -6,32 +6,50 @@
           <div class="bg-white main-img-radius-top main-img-radius-bottom">
             <div class="card-body">
               <div class="d-flex border-bottom py-4  justify-content-center">
-                <div class="content" [innerHTML]="lineForm1">...</div>
-                <div class="content" [innerHTML]="lineForm2">...</div>
+                <div class="content" [innerHTML]="lineInputForm1">...</div>
+              </div>
+              <div class="d-flex border-bottom py-4  justify-content-center">
+                <div class="content" [innerHTML]="lineInputForm2">...</div>
               </div>
               <div class="d-flex border-bottom py-4 flex-wrap justify-content-center px-lg-5">
                 <button id="fillGBtn1" class="btn btn-outline-primary m-2 flex-grow-1"
-                        onclick="fillTestValuesInLine();">G1 mit
+                        onclick="fillTestValuesInLine(1);">G1 mit
                   Random Werte füllen
                 </button>
                 <button id="fillGBtn2" class="btn btn-outline-primary m-2 flex-grow-1"
-                        onclick="fillTestValuesInLine();">G2 mit
+                        onclick="fillTestValuesInLine(2);">G2 mit
                   Random Werte füllen
                 </button>
-                <button id="drawGBtn1" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine();">G1
+                <button id="drawGBtn1" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine(1);">G1
                   zeichnen
                 </button>
-                <button id="drawGBtn2" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine();">G2
+                <button id="drawGBtn2" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine(2);">G2
                   zeichnen
                 </button>
+                <button id="parallelTo1Btn" class="btn btn-outline-success m-2 flex-grow-1"
+                        onclick="drawParallelLineToLine(1)">Parallele Gerade zur G1 zeichnen
+                </button>
+                <button id="parallelTo2Btn" class="btn btn-outline-success m-2 flex-grow-1"
+                        onclick="drawParallelLineToLine(2)">Parallele Gerade zur G2 zeichnen
+                </button>
+
                 <button id="intersectionBtn" class="btn btn-outline-success m-2 flex-grow-1"
-                        onclick="findIntersection()">srsr
+                        disabled onclick="checkParallelism(2)">Parallelität der G1,G2 prüfen
                 </button>
                 <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
               </div>
-              <h2 class="result text-center pt-3">Wert der beiden Parallel</h2>
-              <div class="d-flex border-bottom py-4  justify-content-center">
-                <div >...</div>
+              <div id="output-container-1">
+                <h2 class="result text-center pt-3">Parallel Gerade zur G1 durch den Punkt (1|1|1)</h2>
+                <div class="d-flex border-bottom py-4  justify-content-center">
+                  <div class="content" [innerHTML]="lineOutputForm1">...</div>
+                </div>
+              </div>
+
+              <div id="output-container-2">
+                <h2 class="result text-center pt-3">Parallel Gerade zur G2 durch den Punkt (1|1|1)</h2>
+                <div class="d-flex border-bottom py-4  justify-content-center">
+                  <div class="content" [innerHTML]="lineOutputForm2">...</div>
+                </div>
               </div>
               <div class="d-flex py-4 align-items-center justify-content-center">
                 <div id="ggb-element"></div>
