--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -186,7 +186,7 @@
                 <div class="px-2" style="min-width: 50%">
                   <h4>Parallele Ebenen</h4>
                 </div>
-                <a style="text-decoration: none ; color: black" routerLink="vectors">
+                <a style="text-decoration: none ; color: black" (click)="navigateToParallelPlane()">
                   <div class="rotate-img rounded">
                     <img src="../../assets/images/parallel-ebene.gif" alt="thumb" class="img-fluid"/>
                   </div>
