addes two component length-of-vector and angle-btween-two-vectors srsr :)

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -102,7 +102,7 @@
                 <div class="px-2" style="min-width: 50%">
                   <h4>Die Länge eines Vektors</h4>
                 </div>
-                <a style="text-decoration: none ; color: black" routerLink="vectors">
+                <a style="text-decoration: none ; color: black" (click)="navigateToLengthOfVector()">
                   <div class="rotate-img rounded">
                     <img src="../../assets/images/vector-length.png" alt="thumb"
                          class="img-fluid"/>
@@ -113,7 +113,7 @@
                 <div class="px-2" style="min-width: 50%">
                   <h4>Der Winkel zwischen zwei Vektoren</h4>
                 </div>
-                <a style="text-decoration: none ; color: black" routerLink="vectors">
+                <a style="text-decoration: none ; color: black" (click)="navigateToAngleBetweenTwoVectors()">
                   <div class="rotate-img rounded">
                     <img src="../../assets/images/vector-winckel.png" alt="thumb"
                          class="img-fluid"/>
