--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -124,7 +124,7 @@
                 <div class="px-2" style="min-width: 50%">
                   <h4>Arithmetische Operationen an Vektoren</h4>
                 </div>
-                <a style="text-decoration: none ; color: black" routerLink="vectors">
+                <a style="text-decoration: none ; color: black" (click)="navigateToArithmeticOperationsVectors()">
                   <div class="rotate-img rounded">
                     <img src="../../assets/images/athmathisch-vector.png" alt="thumb"
                          class="img-fluid"/>
