--- a/src/app/dashboard/intersection-two-planes/intersection-two-planes.component.scss
+++ b/src/app/dashboard/intersection-two-planes/intersection-two-planes.component.scss
@@ -1,3 +1,6 @@
+.content-overflow {
+  height: 100%;
+}
 
 ::ng-deep .vector-input {
   max-width: 3rem;
@@ -8,8 +11,6 @@
   border-radius: 0.2rem;
   margin: 0.1rem;
 }
-
-
 
 
 /*Media Queries*/
