--- a/src/app/dashboard/angle-between-two-vectors/angle-between-two-vectors.component.html
+++ b/src/app/dashboard/angle-between-two-vectors/angle-between-two-vectors.component.html
@@ -9,35 +9,33 @@
 
               </div>
               <div class="d-flex border-bottom py-4  justify-content-center">
-                <div class="content" [innerHTML]="lineForm1">...</div>
-              </div>
-              <div class="d-flex border-bottom py-4  justify-content-center">
-                <div class="content" [innerHTML]="lineForm2">...</div>
+                <div class="content mx-3" [innerHTML]="lineForm1">...</div>
+                <div class="content mx-3" [innerHTML]="lineForm2">...</div>
               </div>
               <div class="d-flex border-bottom py-4 flex-wrap justify-content-center px-lg-5">
                 <button id="fillEBtn" class="btn btn-outline-primary m-2 flex-grow-1"
-                        onclick="fillTestValuesInLine(1);">G1 mit
+                        onclick="fillTestValuesInVector(1);">V1 mit
                   Random Werte füllen
                 </button>
                 <button id="fillGBtn" class="btn btn-outline-primary m-2 flex-grow-1"
-                        onclick="fillTestValuesInLine(2);">G2 mit
+                        onclick="fillTestValuesInVector(2);">V2 mit
                   Random Werte füllen
                 </button>
-                <button id="drawEBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine(1);">G1
+                <button id="drawEBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawVector(1);">V1
                   zeichnen
                 </button>
-                <button id="drawGBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawLine(2);">G2
+                <button id="drawGBtn" class="btn btn-outline-primary m-2 flex-grow-1" onclick="drawVector(2);">V2
                   zeichnen
                 </button>
                 <button id="intersectionBtn" class="btn btn-outline-success m-2 flex-grow-1"
-                        onclick="findIntersectionPointBetweenTwoLines()">Winkel berechnen
+                        onclick="calculateAngel()">Winkel berechnen
                 </button>
                 <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
               </div>
-              <h2 class="result text-center pt-3">Winkel zwischen V<sub>1</sub> und V<sub>2</sub> </h2>
+              <h2 class="result text-center pt-3">Winkel zwischen V<sub>1</sub> und V<sub>2</sub></h2>
               <div class="d-flex py-4 align-items-center justify-content-center">
                 <div class="d-flex py-4 justify-content-center">
-
+                  <h2 class="result text-center"><span id="angel-result"></span></h2>
                 </div>
               </div>
               <div class="d-flex py-4 justify-content-center">
