fixed bugs after the tests of srsr

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
               <h1 class="display-6 text-black text-center">Operationen an Geraden</h1>
               <div class="d-flex border-bottom py-4 align-items-center justify-content-between">
                 <div class="px-2" style="min-width: 50%">
-                  <h4>Gerade zwischen zweit Punkten</h4>
+                  <h4>Gerade zwischen zwei Punkten</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToLineBetweenTowPoints()">
                   <div class="rotate-img rounded">
@@ -35,7 +35,7 @@
               </div>
               <div class="d-flex border-bottom py-4 align-items-center justify-content-between">
                 <div class="px-2" style="min-width: 50%">
-                  <h4>Die Länge einer Gerade zweichen zwei Punkten</h4>
+                  <h4>Die Länge einer Gerade zwischen zwei Punkten</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToLengthBetweenTwoPoints()">
                   <div class="rotate-img rounded">
@@ -80,7 +80,7 @@
             <img src="assets/images/vectors.png" alt="thumb" class="img-fluid bg-dark  main-img-radius-top"
                  style="width: 100% ;"/>
             <div class="banner-content bg-white py-3 position-relative mainContainer main-img-radius-bottom">
-              <h3>Vectoren:</h3>
+              <h3>Vektoren:</h3>
               <h6 style="line-height: 2rem">
                 Bei Vektoren handelt es sich aus geometrischer Sicht um Strecken mit einer bestimmten Länge, die
                 sowohl eine bestimmte Richtung,
