--- a/src/app/dashboard/angle-between-two-vectors/angle-between-two-vectors.component.html
+++ b/src/app/dashboard/angle-between-two-vectors/angle-between-two-vectors.component.html
@@ -5,9 +5,6 @@
         <div class="col-xl-12">
           <div class="bg-white main-img-radius-top main-img-radius-bottom">
             <div class="card-body">
-              <div class="d-flex border-bottom pb-4 justify-content-center">
-
-              </div>
               <div class="d-flex border-bottom py-4  justify-content-center">
                 <div class="content mx-3" [innerHTML]="lineForm1">...</div>
                 <div class="content mx-3" [innerHTML]="lineForm2">...</div>
@@ -33,12 +30,8 @@
                 <button class="btn btn-outline-danger m-2 flex-grow-1" onclick="reset();">Zurücksetzen</button>
               </div>
               <h2 class="result text-center pt-3">Winkel zwischen V<sub>1</sub> und V<sub>2</sub></h2>
-              <div class="d-flex py-4 align-items-center justify-content-center">
-                <div class="d-flex py-4 justify-content-center">
-                  <h2 class="result text-center"><span id="angel-result"></span></h2>
-                </div>
-              </div>
-              <div class="d-flex py-4 justify-content-center">
+              <h2 class="result text-center"><span id="angel-result"></span></h2>
+              <div class="d-flex justify-content-center">
                 <h2 class="result text-center" id="no-intersection">Es gibt keinen Schnittpunkt. Die Geraden sind
                   windschief zueinander.</h2>
               </div>
