fixed: add of two vectors

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
                   <h4>Gerade zwischen zwei Punkten</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToLineBetweenTowPoints()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/line-between-tow-points.png" alt="thumb" class="img-fluid"/>
                   </div>
                 </a>
@@ -38,7 +38,7 @@
                   <h4>Die Länge einer Gerade zwischen zwei Punkten</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToLengthBetweenTwoPoints()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/line-length.png" alt="thumb"
                          class="img-fluid"/>
                   </div>
@@ -49,7 +49,7 @@
                   <h4>Parallele Geraden</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToParallelLine()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/parallel-lines.png" alt="thumb"
                          class="img-fluid"/>
                   </div>
@@ -60,7 +60,7 @@
                   <h4>Schnittpunkt zweier Gerade</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToIntersectionOfTwoLine()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/schnitt-punkt-lines.png" alt="thumb"
                          class="img-fluid"/>
                   </div>
@@ -103,7 +103,7 @@
                   <h4>Die Länge eines Vektors</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToLengthOfVector()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/vector-length.png" alt="thumb"
                          class="img-fluid"/>
                   </div>
@@ -114,7 +114,7 @@
                   <h4>Der Winkel zwischen zwei Vektoren</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToAngleBetweenTwoVectors()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/vector-winckel.png" alt="thumb"
                          class="img-fluid"/>
                   </div>
@@ -125,7 +125,7 @@
                   <h4>Arithmetische Operationen an Vektoren</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToArithmeticOperationsVectors()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/athmathisch-vector.png" alt="thumb"
                          class="img-fluid"/>
                   </div>
@@ -165,7 +165,7 @@
                   <h4>Der Schnittpunkt mit einer Gerade</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToIntersectionOfPlaneAndLine()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/schnittpunkt-gerade-und-ebene.png" alt="thumb"
                          class="img-fluid"/>
                   </div>
@@ -176,7 +176,7 @@
                   <h4>Die Schnittmenge zweier Ebenen</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToIntersectionOfPlanes()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/schnittmenge-von-zwei-ebenen.png" alt="thumb"
                          class="img-fluid"/>
                   </div>
@@ -187,7 +187,7 @@
                   <h4>Parallele Ebenen</h4>
                 </div>
                 <a style="text-decoration: none ; color: black" (click)="navigateToParallelPlane()">
-                  <div class="rotate-img rounded">
+                  <div class="rotate-img btn rounded">
                     <img src="../../assets/images/parallel-ebene.gif" alt="thumb" class="img-fluid"/>
                   </div>
                 </a>
